syntax = "proto3";

package ecommerce;

message ProductID {
  string value = 1;
}
